<resources>
    <string name="app_name">SimpleNotes</string>

    <string name="app_bar_text">나의 노트</string>
    <string name="search_here">여기서 검색</string>
    <string name="no_data">노트가 비었습니다</string>
    <string name="add_note">노트 작성</string>
    <string name="choose_color">배경 색상 선택</string>
    <string name="this_is_a_title">What is Lorem Ipsum?</string>
    <string name="some_text">Lorem Ipsum is simply dummy text of
        the printing and typesetting industry. Lorem Ipsum has been
        the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled
        it to make a type specimen book. It has survived not only five
        centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged.
    </string>
    <string name="edited_on">수정: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dd_mm_yy">dd-mm-yy</string>
    <string name="title">제목</string>
    <string name="content">내용</string>
    <string name="empty">노트가 비었습니다</string>
    <string name="select_image">이미지 선택</string>
    <string name="camera">사진 촬영</string>
    <string name="delete">삭제</string>
    <string name="fileAuthority">com.ninezero.simplenotes.fileProvider</string>
</resources>