<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/noteItemLayoutParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:focusable="true"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            app:cardCornerRadius="13dp"
            app:cardElevation="0dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/md_grey_600">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/noteItemTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginTop="8dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:fontFamily="@font/google_sans_medium"
                    android:text="@string/this_is_a_title"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/noteContentItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/noteItemTitle"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="12dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/google_sans_regular"
                    android:maxLines="12"
                    android:textSize="14sp"
                    android:textAlignment="textStart"
                    tools:text="@string/some_text" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/noteDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="6dp"
                    android:layout_below="@id/noteContentItem"
                    android:layout_alignParentEnd="true"
                    android:paddingStart="10dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="3dp"
                    android:background="@drawable/date_rounded"
                    android:drawableStart="@drawable/ic_outline_calendar_today_24"
                    android:drawablePadding="6dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/google_sans_regular"
                    android:text="@string/dd_mm_yy"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textAlignment="textStart"
                    app:drawableTint="@color/black" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>
</layout>