<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:id="@+id/bottomSheetParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomSheetContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_sheet_rounded">

            <ImageView
                android:id="@+id/handle"
                android:layout_width="32dp"
                android:layout_height="4dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/choose_color"
                android:scaleType="fitXY"
                android:src="@drawable/bg_shape_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/button_ripple"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/google_sans_regular"
                android:padding="13dp"
                android:text="@string/camera"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/handle" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/selectImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_ripple"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/google_sans_regular"
                android:padding="13dp"
                android:text="@string/select_image"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/camera" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectImage" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAddColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/google_sans_regular"
                android:paddingStart="16dp"
                android:paddingEnd="24dp"
                android:text="@string/choose_color"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddColor">

                <com.thebluealliance.spectrum.SpectrumPalette
                    android:id="@+id/colorPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="16dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:spectrum_autoPadding="true"
                    app:spectrum_colors="@array/color_picker"
                    app:spectrum_columnCount="11"
                    app:spectrum_outlineWidth="0.7dp" />

            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>