<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/noteContentFragmentParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.NoteContentFragment">

        <RelativeLayout
            android:id="@+id/toolbarNoteContent"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:padding="6dp"
                android:background="@drawable/button_ripple"
                android:focusable="true"
                android:clickable="true"
                android:src="@drawable/ic_round_arrow_back_24" />

            <ImageView
                android:id="@+id/optionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_ripple"
                android:clickable="true"
                android:focusable="true"
                android:padding="6dp"
                android:src="@drawable/ic_baseline_option_horiz_24"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lastEdited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/date_rounded"
                android:ellipsize="end"
                android:fontFamily="@font/google_sans_regular"
                android:paddingStart="13dp"
                android:paddingTop="5dp"
                android:paddingEnd="13dp"
                android:paddingBottom="5dp"
                android:text="@string/edited_on"
                android:textAlignment="center"
                android:textSize="12sp" />

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottomBar"
            android:layout_below="@id/toolbarNoteContent">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="16dp"
                        android:padding="5dp"
                        android:background="@null"
                        android:inputType="none"
                        android:fontFamily="@font/google_sans_medium"
                        android:textSize="24sp"
                        android:importantForAutofill="no"
                        android:hint="@string/title" />

                    <com.yahiaangelo.markdownedittext.MarkdownEditText
                        android:id="@+id/edtNoteContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="8dp"
                        android:padding="6dp"
                        android:background="@null"
                        android:fontFamily="@font/google_sans_regular"
                        android:importantForAutofill="no"
                        android:inputType="none"
                        android:textSize="16sp"
                        android:hint="@string/content" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.yahiaangelo.markdownedittext.MarkdownStylesBar
                android:id="@+id/stylesBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:elevation="5dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </RelativeLayout>
</layout>